updated, fixed bugs, project running